# ai-for-less-suffering

./: .gitignore  .prettierignore  CLAUDE.md  README.md  Taskfile.local.yml  Taskfile.yml  lefthook.yml  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: deploy.yml
agents/: ai-suffering-researcher.yaml  fetcher-parser-prompt.md  ingest-urls-2026-04-22.txt
data/: CLAUDE.md
directives/: CLAUDE.md  DIRECTIVE.md
directives-ai/: ARCHITECTURE.md  BRAIN.md  CANARY.md  CLAUDE.md  GRANT_BRAIN.md  MANIFESTO.md
engine/: CLAUDE.md  pyproject.toml
engine/afls/: __init__.py  cli.py  config.py  output.py
engine/afls/ingest/: __init__.py  fetch.py  read.py
engine/afls/queries/: __init__.py  coalition.py  leverage.py  palantir.py  palantir_seed.py  reallocation.py  research_seed.py  steelman.py
engine/afls/reasoning/: __init__.py  client.py  ingest.py  linker.py  prompts.py  validator.py
engine/afls/schema/: __init__.py  axioms.py  base.py  camps.py  claims.py  evidence.py  ids.py  interventions.py  relations.py  sources.py  suffering_layers.py  warrants.py
engine/afls/storage/: __init__.py  db.py  files.py  registry.py
engine/tests/: test_cli.py  test_coalition.py  test_ingest.py  test_invariants.py  test_layering.py  test_leverage.py  test_linkage.py  test_linker.py  test_palantir.py  test_provenance.py  test_reallocation.py  test_reasoning.py  test_schema.py  test_schema_drift.py  test_smoke.py  test_steelman.py  test_storage.py
public/: canary-key.asc  canary.txt  canary.txt.asc
scripts/: renew-canary.sh
src/: CLAUDE.md  content.config.ts
(+1558 files in other folders)
